front page enhancements

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <section id="landing" class="sceen">
             <nav class="navbar">navigation;</nav>
             <img src="img/envoy_of_the_beginning.png" alt="" style="float:right; height:100%;">
-            <h1>Dueling
-                <br />Network</h1>
+            <img src="img/Yugioh-Logo.png" alt="" style="float:left; height:33%;">
+            <h1 style="float:left; height:33%;">Dueling
+               Network</h1>
             <div id="login" class="login">
 
             </div>
