Updated some functions
Updated README.md; updated index.html to reflect changes made to
main.js: Duel Room event handler and duels.toList() have been added.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,25 @@
         <section id='mainscreen' style="display:none;">
             <div class='chatminimize'></div>
             <div class='privateminimize'></div>
+			<div class="mainbutton" id="openroom">Duel Room</div>
+			<div class="mainbutton" id="deckeditor">Deck Editor</div>
         </section>
-        <section id="duelroom" style="display:none;"></section>
+        <section id="duelroom" style="display:none;">
+			<div class="screenbody">
+				<div class="header">
+					Advanced (unrated)
+					<div id="au"></div>
+				</div>
+				<div class="header">
+					Traditional (unrated)
+					<div id="tu"></div>
+				</div>
+				<div class="header">
+					Unlimited (unrated)
+					<div id="uu"></div>
+				</div>
+			</div>
+		</section>
     </main>
     <script src="js/vendor/jquery-1.10.2.min.js"></script>')
     </script>
