--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <input type="text">
         </div>
         <div id=private style="display:none" draggable="true" ondragstart="drag(event)">
-            <h2>orivate Chat
+            <h2>Private Chat
                 <div class="minimize"></div>
             </h2>
             <ul></ul>
